app: Fix the 'random' font size increase on iOS Safari devices.

--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,9 @@ h2 {
   color: #fefefe;
   opacity: 0.9;
 }
+
+@media screen and (max-device-width: 480px){
+  body{
+    -webkit-text-size-adjust: 100%;
+  }
+}
